# ai-multi-agent-framework

./: .gitignore  README.md  activate_and_run.sh  env.example  install_dependencies.sh  main.py  pyproject.toml  requirements.txt  run_langgraph_demo.py  setup_langgraph_studio.sh
.langgraph_api/: .langgraph_ops.pckl
agents/: __init__.py  base_agent.py  default_agent.py  sales_agent.py
configs/: __init__.py  base_config.py  dev_config.py  email_config_example.yaml  example_config.yaml  example_criteria.yaml  llm_config.yaml  prod_config.py  prometheus.yml
configs/scenarios/: basic_setup.yaml  customer_support.yaml  default_agent_focused.yaml  development.yaml  multi_provider.yaml  sales_focused.yaml
examples/: agent_router_example.py  api_example.py  concurrent_processing_example.py  config_example.py  criteria_engine_example.py  criteria_integration_example.py  data_models_example.py  default_agent_example.py  email_integration_example.py  langgraph_orchestrator_example.py  llm_example.py  plugin_system_example.py  sales_agent_example.py
graphs/: __init__.py  multiagent_graph.py
memory/: __init__.py  memory_base.py  state_manager.py
models/: __init__.py  config_models.py  data_models.py
prompts/: __init__.py  default_prompts.py  default_prompts.yaml  sales_prompts.py  sales_prompts.yaml
scripts/: cleanup.sh  deploy.sh  dev.sh  init-db.sql  test-deployment.sh
services/: __init__.py  api_service.py  cli_service.py
tests/: __init__.py  conftest.py  run_comprehensive_tests.py  shared_fixtures.py  test_agent_router.py  test_api_endpoints.py  test_base_agent.py  test_comprehensive_testing.py  test_concurrent_processing.py  test_config_management.py  test_criteria_engine.py  test_data_models.py  test_default_agent.py  test_email_integration.py  test_email_parser.py  test_error_handler.py  test_error_handling_integration.py  test_final_integration.py  test_langgraph_orchestrator.py  test_llm_provider_error_handling.py  test_llm_providers.py  test_monitoring.py  test_monitoring_api.py  test_new_structure.py  test_plugin_system.py  test_sales_agent.py
tests/integration/: test_end_to_end_workflows.py
tests/performance/: test_load_stress.py
tests/utils/: __init__.py  mock_providers.py  performance_utils.py  test_data_manager.py
tools/: __init__.py  email_tools.py  search_tools.py
utils/: __init__.py  agent_registry.py  cache.py  common_mixins.py  error_handling.py  exceptions.py  http_client.py  llm_provider.py  logger.py  paths.py  validators.py
